# executorch

./: .gitignore  CMakeLists.txt  CMakePresets.json
backends/nuclei/: .gitignore  CMakeLists.txt  translate_from_cortex_m.py
backends/nuclei/ops/: operators.py  operators.yaml
examples/nuclei/: .gitignore  Makefile  check_result.py  generate_bpte.py  nuclei_example.cpp  nuclei_example.py  riscv64-unknown-elf-gcc.cmake
tools/cmake/preset/: nuclei.cmake
